# portfolio-chatbot

./: .gitignore  Cargo.toml
src/: main.rs
src/portfolio/: portfolio.rs
src/routes/: date.rs
src/services/: gemini.rs  mod.rs
templates/: index.html.tera
